--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -76,7 +76,7 @@
 "VSettingsCellReview_labelTitle"="You like Gauss Squad?";
 "VSettingsCellReview_labelSubtitle"="\nWrite a review on the App Store";
 "VSettingsCellShare_labelTitle"="Share the app";
-"VSettingsCellShare_labelSubtitle"="Let others know about Gauss Squad";
+"VSettingsCellShare_labelSubtitle"="\nLet others know about Gauss Squad";
 "VStoreFooter_buttonRestore"="Restore purchase";
 "VStoreCellNew_buttonPurchase"="Purchase";
 "VStoreCellDeferred_label"="Purchase deferred";
