--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -1,5 +1,5 @@
-"MHomeItemCalculator_symbol"="+ - × ÷ √ ^";
-"MHomeItemCalculator_title"="Calculator";
+"MHomeItemCalculator_symbol"="Calculator";
+"MHomeItemCalculator_title"="Pascaline";
 "MHomeItemLinearEquations_symbol"="ax + b = 0";
 "MHomeItemLinearEquations_title"="Linear equations";
 "MLinearEquationsProject_defaultIndeterminate"="x";
