--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -46,6 +46,9 @@
 "MHelpCalculatorItemPascal_title"="Blaise Pascal";
 "MHelpCalculatorItemPascal_date"="\n19/6/1623 - 19/8/1662";
 "MHelpCalculatorItemPascal_subtitle"="\nFrench mathematician and philosopher, created the first mechanical calculator while still a teenager and by 1645 made a public presentation of 50 different prototypes.";
+"MHelpCalculatorItemOptions_title"="Display the list of avaiable functions";
+"MHelpCalculatorItemFunctions_title"="Select a function card to use it";
+"MHelpCalculatorItemUndo_title"="Go back to any previous state";
 "MHelpLinearEquationsProjectItemPolynomials_title"="Select a polynomial for edition or change the indeterminate";
 "MHelpLinearEquationsProjectItemAddPolynomial_title"="Add polynomials";
 "MHelpLinearEquationsProjectItemEditRow_title"="Rearrange or delete equation";
