settings item version

--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -86,7 +86,7 @@
 "VSettingsCellSupport_labelSubtitle"="\nSend us your questions, we'd like to read you";
 "VSettingsCellReview_labelTitle"="You like Gauss Squad?";
 "VSettingsCellReview_labelSubtitle"="\nWrite a review on the App Store";
-"VSettingsCellShare_labelTitle"="Share the app";
+"VSettingsCellShare_labelTitle"="Share app";
 "VSettingsCellShare_labelSubtitle"="\nLet others know about Gauss Squad";
 "VStoreFooter_buttonRestore"="Restore purchase";
 "VStoreCellNew_buttonPurchase"="Purchase";
