view scanner cell

--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -90,7 +90,7 @@
 "VSettingsCellReview_labelSubtitle"="\nWrite a review on the App Store";
 "VSettingsCellShare_labelTitle"="Share app";
 "VSettingsCellShare_labelSubtitle"="\nLet others know about Gauss Squad";
-"VScannerOCRBar_label"="Make any changes if needed to the scanned text, then select an import option";
+"VScannerOCRBar_label"="Edit text if needed before import";
 "VStoreFooter_buttonRestore"="Restore purchase";
 "VStoreCellNew_buttonPurchase"="Purchase";
 "VStoreCellDeferred_label"="Purchase deferred";
