--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "MCalculatorFunctionsExponents_title"="Exponents";
 "MScannerMenuItemClean_title"="Clean";
 "MScannerMenuItemHelp_title"="Help";
+"MScannerMenuItemCalculator_title"="Calculator";
 "MHelpCalculatorItemPascal_title"="Blaise Pascal";
 "MHelpCalculatorItemPascal_date"="\n19/6/1623 - 19/8/1662";
 "MHelpCalculatorItemPascal_subtitle"="\nFrench mathematician and philosopher, created the first mechanical calculator while still a teenager and by 1645 made a public presentation of 50 different prototypes.";
