--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -48,7 +48,7 @@
 "MCalculatorFunctionsItemAnyExponent_title"="Any Exponent";
 "MCalculatorFunctionsTrigonometry_title"="Trigonometry";
 "MCalculatorFunctionsExponents_title"="Exponents";
-"MScannerMenuItemClean_title"="Clean";
+"MScannerMenuItemClean_title"="Compress";
 "MScannerMenuItemHelp_title"="Help";
 "MScannerMenuItemCalculator_title"="Calculator";
 "MHelpCalculatorItemPascal_title"="Blaise Pascal";
