--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -75,6 +75,7 @@
 "MHelpCalculatorItemCrop_title"="Try to center the scanning region in just equations and operations";
 "MHelpCalculatorItemEdit_title"="Edit the result if needed";
 "MHelpCalculatorItemClean_title"="Compress tool will remove repeated or wrong characters";
+"MHelpCalculatorItemCalculator_title"="Import to Calculator";
 "MStoreItemPlus_title"="Plus\n";
 "MStoreItemPlus_descr"="Unlimited indeterminates.\nCreate as many variables as you need without restrictions";
 
