--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -2,8 +2,8 @@
 "MHomeItemCalculator_title"="Pascaline";
 "MHomeItemLinearEquations_symbol"="ax + b = 0";
 "MHomeItemLinearEquations_title"="Linear equations";
-"MHomeItemScanner_symbol"="Import equations and operations";
-"MHomeItemScanner_title"="Scanner";
+"MHomeItemScanner_symbol"="Augmented reality equations";
+"MHomeItemScanner_title"="Turing vision";
 "MLinearEquationsProject_defaultIndeterminate"="x";
 "MLinearEquationsItem_positive"=" + ";
 "MLinearEquationsItem_negative"=" - ";
@@ -79,7 +79,7 @@
 "MHelpLinearEquationsPlotItemDescartes_title"="René Descartes";
 "MHelpLinearEquationsPlotItemDescartes_date"="\n31/3/1596 - 11/2/1650";
 "MHelpLinearEquationsPlotItemDescartes_subtitle"="\nFrench mathematician known as the father of modern philosophy and analytical geometry, which relates algebra and geometry using the Cartesian Coordinate System.";
-"MHelpLinearEquationsPlotItemOrigin_title"="Center on the Cartesian Coordinate System' origin";
+"MHelpLinearEquationsPlotItemOrigin_title"="Center on the Cartesian Coordinate System's origin";
 "MHelpLinearEquationsPlotItemCenter_title"="Center on a indeterminate";
 "MHelpLinearEquationsPlotItemZoom_title"="Zoom in and out";
 "MStoreItemPlus_title"="Plus\n";
